# norway-climate-service

./: .env.example  .gitignore  Makefile  README.md  climate-api.yaml  download_senorge.py  pyproject.toml
plugins/datasets/: senorge.py  senorge.yaml
plugins/processes/: spatial_stats.py  spatial_stats.yaml
plugins/senorge/: daily.py
plugins/transforms/: senorge.py
