[project]
name = "norway-climate-service"
version = "0.1.0"
requires-python = ">=3.13"
description = "Open Climate Service instance for Norway"
dependencies = [
    "climate-api @ git+https://github.com/dhis2/climate-api.git",
    "dhis2eo>=1.2.1",
]

[tool.uv]
package = false

[tool.uv.sources]
climate-api = { git = "https://github.com/dhis2/climate-api.git", branch = "feat/icechunk-ingest" }
